--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>purple nostrich</title>
-    <meta name="description" content="Description of your site">
-    <meta name="keywords" content="Bitcoin, Nostr, Technology">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <canvas id="matrixCanvas">Your browser does not support the canvas element.</canvas>
+    <canvas id="matrixCanvas"></canvas>
     <a id="nostrButton" href="https://damus.io/npub1z4m7gkva6yxgvdyclc7zp0vz4ta0s2d9jh8g83w03tp5vdf3kzdsxana6p" target="_blank" rel="noopener noreferrer" aria-label="Nostr Profile">
         <span class="nostrText"></span>
     </a>
