--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span class="nostrText"></span>
     </a>
     <a id="bitcoinLink" href="https://bitcoincore.org/" target="_blank" rel="noopener noreferrer">
-        <img id="bitcoinLogo" src="Images/bitcoin-logo.png" alt="Bitcoin Logo">
+        <img id="bitcoinLogo" src="bitcoin-logo.png" alt="Bitcoin Logo">
     </a>
     <script src="script.js" defer></script>
 </body>
