--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a id="nostrButton" href="https://damus.io/npub1z4m7gkva6yxgvdyclc7zp0vz4ta0s2d9jh8g83w03tp5vdf3kzdsxana6p" target="_blank" rel="noopener noreferrer" aria-label="Nostr Profile">
         <span class="nostrText"></span>
     </a>
-    <a id="bitcoinLink" href="https://bitcoincore.org/" target="_blank" rel="noopener noreferrer">
+    <a id="bitcoinLink" href="https://bitcoincore.org/" target="_blank">
         <img id="bitcoinLogo" src="bitcoin-logo.png" alt="Bitcoin Logo">
-    </a>
-    <script src="script.js" defer></script>
+      </a>
+    <script src="script.js"></script>
 </body>
 </html>
